# GrzeLib

./: .gitignore  CMakeLists.txt
headers/: gstring.h  string.h
src/: gstring.c  string.c
